Combined commit of fixes for #574 and #625
 Squashed commit of the following:

 commit 4efdc1f2edd4596532ce467eb3406540dd5a5208
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Wed Oct 25 11:03:56 2017 +0200

     downgrading chromedriver as the upgrade should be local only. Upgrading breaks integrationstests when run in CI (Jenkins) due to old version of chrome.

 commit 3d1e8a91f2b40102e79d78d3be7d21caef596bde
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Wed Oct 25 10:59:59 2017 +0200

     Vis mere button should only be visible when more items are available for display (#625)

 commit 502124fee47217d38e6182315fc82db44a17ef3e
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Wed Oct 25 10:30:57 2017 +0200

     Series display (#574):
     - Lighter titles
     - Shorten loooooooooong titles

 commit 34ec7a911f7bcdb966999ba8ef3577d5ba325988
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Tue Oct 24 23:06:25 2017 +0200

     lighter font i titleSeries display

 commit 3f8ce5a3803cab35f9c8d232b4e0efa52a62abe7
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Tue Oct 24 22:57:43 2017 +0200

     prefetching titleSeries and only display Vis mere button if relevant (#625)

 commit 765ffc02b24337c8c859e13341b2d818e6a2e9b7
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Tue Oct 24 20:21:04 2017 +0200

     Testing series display.

 commit 049270938ba273205a5192576806d4705942ae2d
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Mon Oct 23 21:55:24 2017 +0200

     margin-bottom: 50px

 commit b78d8aab21fff39ecc5b387dba31089e5f554811
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Mon Oct 23 21:02:11 2017 +0200

     Fixed regex

 commit 729c631043390b94ff298b69c2d1bc2c4537e184
 Author: Martin Møller <m@hrmoller.dk>
 Date:   Thu Oct 19 22:31:56 2017 +0200

     logging / ignoring

 with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Your branch is up-to-date with 'origin/master'.

 Changes to be committed:
	modified:   .gitignore
	modified:   s

--- a/src/client/components/Work/scss/MultivolumeDisplay.component.scss
+++ b/src/client/components/Work/scss/MultivolumeDisplay.component.scss
@@ -8,11 +8,13 @@
     display: inline-table;
 
     p {
-      font-weight: 600;
+      font-weight: 400;
+      font-size: 0.9rem;
       color: $black;
       margin: 0;
       text-align: center;
       max-width: 90px;
+      word-wrap: break-word;
     }
 
     img {
